--- a/packages.config
+++ b/packages.config
@@ -5,13 +5,16 @@
   <package id="DSharpPlus.CommandsNext" version="4.4.1" targetFramework="net48" />
   <package id="DSharpPlus.Interactivity" version="4.4.1" targetFramework="net48" />
   <package id="DSharpPlus.SlashCommands" version="4.4.1" targetFramework="net48" />
+  <package id="FirebaseAdmin" version="2.3.0" targetFramework="net48" />
   <package id="FireSharp" version="2.0.4" targetFramework="net48" />
   <package id="Google.Api.CommonProtos" version="2.7.0" targetFramework="net48" />
   <package id="Google.Api.Gax" version="4.3.1" targetFramework="net48" />
   <package id="Google.Api.Gax.Grpc" version="4.3.1" targetFramework="net48" />
-  <package id="Google.Apis" version="1.58.0" targetFramework="net48" />
-  <package id="Google.Apis.Auth" version="1.58.0" targetFramework="net48" />
-  <package id="Google.Apis.Core" version="1.58.0" targetFramework="net48" />
+  <package id="Google.Api.Gax.Rest" version="4.3.1" targetFramework="net48" />
+  <package id="Google.Apis" version="1.60.0" targetFramework="net48" />
+  <package id="Google.Apis.Auth" version="1.60.0" targetFramework="net48" />
+  <package id="Google.Apis.Core" version="1.60.0" targetFramework="net48" />
+  <package id="Google.Apis.Translate.v2" version="1.60.0.875" targetFramework="net48" />
   <package id="Google.Cloud.Firestore" version="3.3.0" targetFramework="net48" />
   <package id="Google.Cloud.Firestore.V1" version="3.3.0" targetFramework="net48" />
   <package id="Google.Cloud.Location" version="2.0.0" targetFramework="net48" />
@@ -24,11 +27,13 @@
   <package id="Grpc.Net.Common" version="2.51.0" targetFramework="net48" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net48" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net48" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection" version="5.0.1" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="6.31.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.31.0" targetFramework="net48" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
@@ -48,6 +53,9 @@
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net48" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="7.0.2" targetFramework="net48" />
   <package id="System.Threading.Channels" version="5.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
