--- a/faxnocapBPbot.csproj
+++ b/faxnocapBPbot.csproj
@@ -315,21 +315,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AlbionApiFetcher.cs" />
-    <Compile Include="BattleboardAggregator.cs" />
+    <Compile Include="Helpers\AlbionApiFetcher.cs" />
     <Compile Include="Bot.cs" />
     <Compile Include="Commands\BattleboardCommands.cs" />
     <Compile Include="Commands\GuildCommands.cs" />
-    <Compile Include="ConfigStructs\Config.cs" />
-    <Compile Include="ConfigStructs\ConfigDeserializator.cs" />
+    <Compile Include="ConfigStructs\DiscordConfig.cs" />
+    <Compile Include="Helpers\ConfigDeserializator.cs" />
     <Compile Include="ConfigStructs\FirestoreConfig.cs" />
     <Compile Include="Exceptions\ApiException.cs" />
     <Compile Include="Firestore.cs" />
     <Compile Include="Handlers\Battleboard.cs" />
+    <Compile Include="Helpers\BattleboardAggregator.cs" />
     <Compile Include="Interfaces\IBattleboard.cs" />
-    <Compile Include="JsonModels\JSONbattleboard.cs" />
-    <Compile Include="JsonModels\JSONguild.cs" />
-    <Compile Include="JsonModels\JSONplayer.cs" />
+    <Compile Include="JsonModels\BattleboardModel.cs" />
+    <Compile Include="JsonModels\GuildModel.cs" />
+    <Compile Include="JsonModels\PlayerModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Status.cs" />
@@ -342,6 +342,7 @@
     </EmbeddedResource>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
   <Target Name="EnsureBclBuildImported" BeforeTargets="BeforeBuild" Condition="'$(BclBuildImported)' == ''">
